--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,13 @@
   margin-right: 1rem;
 }
 
+.header__logout {
+  cursor: pointer;
+  position: absolute;
+  right: 2em;
+  top: 2em;
+}
+
 .header__columns {
   display: flex;
 }
