--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -9,23 +9,48 @@
   will-change: transform;
 }
 
+.card__vote,
 .card__close {
   background-color: #eee;
-  border-radius: 50%;
   box-shadow: 0 2px 4px 0 #0000004c;
   box-sizing: border-box;
-  cursor: pointer;
-  height: 1.5rem;
-  line-height: 1.5rem;
   opacity: 0;
   position: absolute;
   text-align: center;
-  width: 1.5rem;
   transition: .2s opacity;
+  width: 1.5rem;
   will-change: opacity;
 }
 
+.card__vote {
+  border-radius: 5px 0 0 5px;
+  cursor: pointer;
+  display: flex;
+  flex-flow: column nowrap;
+  height: 50px;
+  justify-content: space-around;
+  left: -24px;
+}
+
+.card__vote--count {
+  font-size: .7rem;
+}
+
+.card__vote--upvote:hover,
+.voted > .card__vote--upvote,
+.voted > .card__vote--count {
+  color: #ff4500;
+}
+
+.card__close {
+  border-radius: 50%;
+  height: 1.5rem;
+  line-height: 1.5rem;
+}
+
 .card__close:hover,
-.card:hover + .card__close {
+.card__vote:hover,
+.card:hover ~ .card__vote,
+.card:hover ~ .card__close {
   opacity: 1;
 }
