--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,7 +10,8 @@
 }
 
 .card__vote,
-.card__close {
+.card__close,
+.card__vote--count {
   background-color: #eee;
   box-shadow: 0 2px 4px 0 #0000004c;
   box-sizing: border-box;
@@ -27,18 +28,27 @@
   cursor: pointer;
   display: flex;
   flex-flow: column nowrap;
-  height: 50px;
+  height: 35px;
   justify-content: space-around;
   left: -24px;
 }
 
 .card__vote--count {
+  border-radius: 0 5px 0 0;
+  border-right: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  bottom: 1px;
+  box-shadow: none;
   font-size: .7rem;
+  height: 20px;
+  left: 1px;
+  line-height: 20px;
+  opacity: 1;
 }
 
-.card__vote--upvote:hover,
-.voted > .card__vote--upvote,
-.voted > .card__vote--count {
+.card__vote:hover,
+.voted,
+.voted + .card__vote--count {
   color: #ff4500;
 }
 
