--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,10 +8,23 @@
 }
 
 .header__logout {
+  background-color: #057bcf;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.15);
+  color: #fff;
   cursor: pointer;
+  display: block;
+  font-weight: lighter;
+  padding: .7rem;
   position: absolute;
-  right: 2em;
-  top: 2em;
+  right: 2rem;
+  top: 1rem;
+  transition: all .2s;
+}
+
+.header__logout:hover {
+  background-color: #045f9f;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.3);
 }
 
 .header__columns {
